[ENG-11469] Fix customer id color on mobile (#1268)
* [ENG-11469] Fix customer id color on mobile

* Fix UI not being like mockups

--- a/src/components/common/AppQuoteComponents/index.scss
+++ b/src/components/common/AppQuoteComponents/index.scss
@@ -41,13 +41,38 @@
       display: flex;
       justify-content: space-between;
 
+      h4 {
+        font-weight: 600;
+        margin-right: $h-40;
+
+        > span::before {
+          content: ' - ';
+        }
+      }
+
+      // save pdf button should be always at the top
+      > div:nth-child(2) {
+        align-self: flex-start;
+      }
+
       @include phone() {
         align-items: flex-start;
         flex-direction: column;
         margin: $v-30 $h-20;
 
         h4 {
-          margin-bottom: $v-12;
+          margin: 0 0 $v-12 0;
+          font-size: ($font-label-size * 2) - 2;
+
+          > span::before {
+            content: '';
+          }
+
+          > span {
+            display: flex;
+            font-size: $font-regular-size + 2;
+            padding-top: $v-6;
+          }
         }
       }
     }
@@ -68,10 +93,10 @@
     position: relative;
 
     @include tablet() {
-      min-height: calc(#{$map-min-height}/ 1.5);
+      max-height: calc(#{$map-min-height}/ 1.5);
     }
     @include phone() {
-      min-height: calc(#{$map-min-height} / 2);
+      max-height: calc(#{$map-min-height} / 2);
     }
 
     &__content {
@@ -121,6 +146,16 @@
     img {
       margin-right: $h-5;
     }
+
+    @include phone() {
+      height: $v-24;
+      font-size: $font-label-size;
+      min-width: $h-80 + $h-20;
+
+      img {
+        height: $v-12;
+      }
+    }
   }
 
   .quote-license {
@@ -159,11 +194,12 @@
     border: 1px solid $gray-4;
     margin-bottom: $v-30;
 
-    .quote-customer-id {
-      color: $gray-2;
+    .data-row {
+      width: 20%;
     }
 
-    .data-row {
+    // increase the width of the customer name column
+    > div:nth-child(1) {
       width: 30%;
     }
 
@@ -175,14 +211,19 @@
     @include tablet() {
       flex-wrap: wrap;
 
-      .data-row {
+      > div:nth-child(1),
+      > div:nth-child(2) {
         width: 100%;
       }
 
-      > div:nth-child(2) {
-        width: unset;
+      .data-row {
+        width: 100%;
       }
     }
+  }
+
+  .quote-customer-id {
+    color: $gray-2;
   }
 
   .quote-fields {
@@ -211,7 +252,7 @@
     }
 
     .Collapsible {
-      padding: $v-12;
+      padding: $v-12 $h-20;
       border-top: 1px solid $gray-4;
 
       &:first-child {
@@ -220,6 +261,11 @@
 
       &:last-child {
         border-bottom: 1px solid $gray-4;
+      }
+
+      .h4 {
+        font-size: $font-regular-size;
+        font-weight: 600;
       }
     }
 
